# simple-keylogger

./: .gitignore  CMakeLists.txt  README.md  SECURITY.md  main.c
.github/workflows/: cmake.yml
data_structures/: linked_queue.c
data_structures/include/queue/: linked_queue.h
kb_logger/: kb_decoder.c  kb_logger.c
kb_logger/include/: kb_decoder.h  kb_logger.h
logger/: logger.c
logger/include/logs/: logger.h
mapper/: kb_mapper.c
mapper/include/: kb_mapper.h
mem/include/: mem.h
reader/: kb_reader.c
reader/include/: kb_reader.h
src/logger/include/logs/: logger.h
src/mapper/: kb_mapper.c
src/mem/include/: mem.h
src/tools/: file_handler.c
src/tools/include/file/: file_handler.h
tools/: file_handler.c  keyboard.c
tools/include/constants/: constants.h
tools/include/file/: file_handler.h
tools/include/keyboard/: keyboard.h
worker/: kb_worker.c
worker/include/: kb_worker.h
